--- a/OTS_0.4/MainPage.xaml
+++ b/OTS_0.4/MainPage.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl 
-  x:Class="OTS_0._4.MainPage"
+﻿<UserControl
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation" 
   xmlns:uriMapper="clr-namespace:System.Windows.Navigation;assembly=System.Windows.Controls.Navigation"
   xmlns:dataControls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Data.DataForm.Toolkit" 
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+  xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions" 
+  x:Class="OTS_0._4.MainPage" 
   mc:Ignorable="d" d:DesignHeight="480" d:DesignWidth="640">
 	<UserControl.Resources>
 		<Style x:Key="ButtonStyle1" TargetType="Button">
@@ -95,8 +96,8 @@
             <RowDefinition Height="0.931*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="115" />
-            <ColumnDefinition Width="550*" />
+            <ColumnDefinition Width="113.667" />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
         <Grid Style="{StaticResource NavigationOuterGridStyle}" 
@@ -112,8 +113,7 @@
                         <ContentControl Style="{StaticResource LogoIcon}"/>
                         <TextBlock x:Name="ApplicationNameTextBlock" 
                        Style="{StaticResource ApplicationNameStyle}" 
-                               Text="{Binding ApplicationStrings.ApplicationName, 
-Source={StaticResource ResourceWrapper}}" FontFamily="Kalinga" FontSize="16"/>
+                               Text="{Binding ApplicationStrings.ApplicationName, Source={StaticResource ResourceWrapper}}" FontFamily="Kalinga" FontSize="16" Foreground="{StaticResource BodyTextColorBrush}"/>
 
                     </StackPanel>
                 </Border>
@@ -141,12 +141,10 @@ Source={StaticResource ResourceWrapper}}" FontFamily="Kalinga" FontSize="16"/>
                         <Rectangle x:Name="Divider1_Copy1" 
                         	Style="{StaticResource DividerStyle}"/>
                         <HyperlinkButton x:Name="SignOut" 
-                        	Style="{StaticResource LinkStyle}" 
-                        	NavigateUri="/About" 
+                        	Style="{StaticResource LinkStyle}"
+                        	NavigateUri="/SignOut"
                         	TargetName="ContentFrame" 
-                        	Content="{Binding ApplicationStrings.AboutPageTitle, Source={StaticResource ResourceWrapper}}"/>
-                        <Rectangle x:Name="Divider1_Copy2" 
-                        	Style="{StaticResource DividerStyle}"/>
+                        	Content="{Binding ApplicationStrings.SignOutPageTitle, Source={StaticResource ResourceWrapper}}"/>
                        
                        
                     </StackPanel>
@@ -161,36 +159,30 @@ Source={StaticResource ResourceWrapper}}" FontFamily="Kalinga" FontSize="16"/>
         </Grid>
 
         <Border x:Name="Sidebar"
-                Grid.Row="1" Grid.RowSpan="2">
-        	<Border.Background>
-        		<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-        			<GradientStop Color="#CC5A0101" Offset="0"/>
-        			<GradientStop Color="White" Offset="1"/>
-        		</LinearGradientBrush>
-        	</Border.Background>
+                Grid.Row="1" Grid.RowSpan="2" Background="#110C6DEB">
+        	<StackPanel>
+        		<TextBlock TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center"><Run Text="Actions"/><LineBreak/><Run/></TextBlock>
+        		<Button Content="Button" Style="{StaticResource SideBarButton}"/>
+        	</StackPanel>
         </Border>
         
-        <Border x:Name="TabsBorder" Grid.Row="1" Grid.Column="1" BorderBrush="#FF8A0303" BorderThickness="0" Height="30" Margin="0">
-         	<Border.Background>
-        		<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-        			<GradientStop Color="#668A0303" Offset="0"/>
-        			<GradientStop Color="White" Offset="1"/>
-        		</LinearGradientBrush>
-        	</Border.Background>
+        <Border x:Name="TabsBorder" Grid.Row="1" Grid.Column="1" BorderBrush="#FF8A0303" BorderThickness="0" Height="30" Margin="0" Background="#FF93B5E0">
         	<StackPanel x:Name="TabsStackPanel" Orientation="Horizontal" >
-        		<HyperlinkButton x:Name="TabLinkParts" 
-                                 Style="{StaticResource TabsButton}"
-                                 NavigateUri="/Parts"
-                                 TargetName="ContentFrame" 
-                                 Content="Parts"                                     
-                                 Foreground="#FF8A1E1E" />
         		
-                <HyperlinkButton x:Name="TabLinkVendors" 
-        			             Style="{StaticResource TabsButton}"
-        			             NavigateUri="/Vendors"
-        			             TargetName="ContentFrame" 
-                                 Content="{Binding ApplicationStrings.VendorsPageTitle, Source={StaticResource ResourceWrapper}}"                                                     Foreground="#FF8A1E1E" />										      	
-			</StackPanel>
+
+                <HyperlinkButton x:Name="TabPartsButton" 
+                        	Style="{StaticResource HyperlinkButtonStyle1}"
+                        	NavigateUri="/Parts"
+                        	TargetName="ContentFrame" 
+                        	Content="{Binding ApplicationStrings.PartsPageTitle, Source={StaticResource ResourceWrapper}}" Width="111"/>
+                
+				<HyperlinkButton x:Name="TabVendorsButton" 
+                	Style="{StaticResource HyperlinkButtonStyle1}"
+                	NavigateUri="/Vendors"
+                	TargetName="ContentFrame" 
+                	Content="{Binding ApplicationStrings.PartsPageTitle, Source={StaticResource ResourceWrapper}}" Width="111"/>
+
+            </StackPanel>
         </Border>
 
         <Border x:Name="ContentBorder" 
@@ -209,7 +201,6 @@ Source={StaticResource ResourceWrapper}}" FontFamily="Kalinga" FontSize="16"/>
                 </navigation:Frame.UriMapper>
             </navigation:Frame>
         </Border>
-        <TextBlock Grid.Column="1" Height="6" Margin="204,-86,317,0" TextWrapping="Wrap" Text="  " VerticalAlignment="Top"/>
 
     </Grid>
 
